--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="C:/Users/esuzu/Downloads/csv_1_0_1/csv.jar"/>
+	<classpathentry kind="lib" path="C:/eclipse/plugins/csv.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
